--- a/index.html
+++ b/index.html
@@ -10,13 +10,20 @@
   <script src='https://js.leapmotion.com/leap-0.6.3.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.sound.min.js'></script>
   <script src='https://aframe.io/releases/0.6.1/aframe.min.js'></script>
+  <script src="https://unpkg.com/aframe-leap-hands/dist/aframe-leap-hands.min.js"></script>
 
 </head>
 
 <body>
 
-  <a-scene>
+  <a-scene leap="vr: false" camera="near: 0.01" look-controls position="0 1.5 0">
+  <!-- <a-scene leap="vr: false" camera="near: 0.01" look-controls position="0 1.5 0"> -->
+
     <a-sphere position="0 1.25 -20" radius="1.25" color="#EF2D5E"></a-sphere>
+
+    <a-entity leap-hand="hand: left"></a-entity>
+    <a-entity leap-hand="hand: right"></a-entity>
+
   </a-scene>
 
   <script src="js/index.js"></script>
