--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
     <a-sphere position="0 1.25 -20" radius="1.25" color="#EF2D5E"></a-sphere>
 
-    <a-entity leap-hand="hand: left"></a-entity>
-    <a-entity leap-hand="hand: right"></a-entity>
+    <a-entity leap-hand="hand: left" position="0 1 -1"></a-entity>
+    <a-entity leap-hand="hand: right" position="0 1 -1"></a-entity>
 
   </a-scene>
 
