added colada model of theremin

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <!-- <a-scene leap="vr: false" camera="near: 0.01" look-controls position="0 1.5 0"> -->
 
     <a-sphere position="0 1.25 -20" radius="1.25" color="#EF2D5E"></a-sphere>
+    <a-collada-model src="/assets/model.dae" position="-0.5 1 -1" rotation="0 270 0"></a-collada-model>
 
     <a-entity leap-hand="hand: left" position="0 1 -1"></a-entity>
     <a-entity leap-hand="hand: right" position="0 1 -1"></a-entity>
